2004-02-05  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-view.c (emfv_mail_next_flagged): Pass TRUE as
	wraparound (to both be consistant with prev_flagged and to fix bug
	#48681.

2004-02-05  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (emft_copy_folders__copy): sync the from folder
	if we're going to delete it, otherwise we can't because its not
	empty.  See #53815.

2004-02-05  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree-model.c
	(em_folder_tree_model_drag_data_received): hmm, another well
	tested bit of code ... if you launch another thread you gotta copy
	the selection since it wont hang around until we're done with it.
	So copy/parse the selection data into appropriate structures.
	(drop_folder): just take the async message as an argument, rather
	than copying half of it to the stack.
	(drop_text_uri_list, drop_uid_list): replace most args with the
	thread message.
	(drop_message_rfc822): removed, now trivial.
	(emftm_drag_data_received_async__drop): change for changed args,
	and fix a memleak.
	(emftm_drag_data_received_async__free): fixed for changed
	structure.

	* em-folder-tree.c (em_folder_tree_create_folder): call abort
	before we unref, aid debugging if we hit it.

	* mail-vfolder.c (uri_is_spethal): check for vfolder/vtrash
	folders.  Based on name check and store options.

2004-02-04  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-tree-model.c (em_folder_tree_model_row_drop_target):
	Don't allow dropping into a vfolder (store). Fixes bug #53757.

2004-02-04  Not Zed  <NotZed@Ximian.com>

	** See bug #53683.

	* mail-ops.c (mail_sync_store): new async op to call
	CamelStore::sync.

	* mail-component.c (impl_requestQuit): implement, check to see if
	we can quit, or have open or unsent messages (and are in online
	mode).
	(impl_quit): implement.  Trigger off a sync of all open stores,
	and return FALSE until its done.
	(impl_upgradeFromVersion): fixed the signature to match the idl,
	killed that warning at last.

	** See bug #53832.
